<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/overlay_fun_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/overlay_popup_fun"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="36sp"/>

        <TableLayout
            android:id="@+id/act_overlay_table_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center">

            <TableRow>

                <Button
                    android:id="@+id/act_overlay_above_left_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/above_left" />

                <Button
                    android:id="@+id/act_overlay_above_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/above" />

                <Button
                    android:id="@+id/act_overlay_above_right_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@string/above_right" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/act_overlay_left_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/left" />

                <Button
                    android:id="@+id/act_overlay_clear_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/clear"/>


                <Button
                    android:id="@+id/act_overlay_right_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@string/right" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/act_overlay_below_left_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/below_left" />

                <Button
                    android:id="@+id/act_overlay_below_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/below" />

                <Button
                    android:id="@+id/act_overlay_below_right_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@string/below_right" />

            </TableRow>

        </TableLayout>

    </RelativeLayout>

</FrameLayout>